--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,7 @@
 
     <string name="navSavedName">test_name</string>
     <string name="browse_tag_card_header_text">Tags</string>
+    <string name="pref_colored_toolbar_title">Colored Toolbar</string>
 
 
 </resources>
