--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,10 +96,8 @@
     <string name="title_activity_add_list">Add Task</string>
     <string name="title_activity_tag_select">Select Tag</string>
     <string name="title_activity_create_tag">Add Tag</string>
-    <string name="title_activity_task_view">TaskView</string><!--not needed, sets dynamically based
-    on task title-->
-
-
+    <string name="title_activity_task_view">TaskView</string><!--not needed, sets dynamically based on task title-->
+    <string name="title_activity_search">Search</string>
     <string name="title_activity_archive">Archive</string>
 
     <!--Color picker text-->
@@ -119,6 +117,8 @@
     <string name="pref_header_folder">Folders</string>
     <string name="pref_header_notif">Notifications</string>
     <string name="no_remaining_tasks">No Tasks Left!</string>
+
+    <string name="search_hint">Search tasks and tags</string>
 
 
 </resources>
