bottom sheet instead of nav drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,6 +127,7 @@
 
     <string name="search_hint">Search tasks and tags</string>
     <string name="project_header_title">Project</string>
+    <string name="import_export_menu">Import/Export</string>
 
 
 </resources>
