--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,7 @@
     <string name="onboarding_folders_screen_description">To get around the app, you can select the tags you want to see, and only look at those tasks. The Inbox view lets you see all the tasks containing the tags you\'ve picked. The Browse view lets you pick tags to filter down, and only shows exact matches.</string>
     <string name="onboarding_project_screen_title">Projects</string>
     <string name="onboarding_project_screen_description">Projects are the highest level of sorting in the app. Each has a separate set of tasks and tags. You could make one for simple reminders, and one for long-term projects, for example. \n \n That\'s it! Go add some tasks!</string>
+    <string name="add_task_name_hint">Task Name</string>
 
 
 </resources>
