--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,6 @@
 
     <!-- Strings related to Settings -->
 
-    <!-- Example General settings -->
     <string name="pref_header_general">General</string>
 
     <string name="pref_title_filter_folder">Folder Mode</string>
@@ -33,9 +32,13 @@
         <item>0</item>
         <item>1</item>
     </string-array>
-
-    <!-- Example settings for Notifications -->
     <string name="pref_header_theme">Theme</string>
+
+
+    <!--  Notifications -->
+    <string name="notif_action_done">Done</string>
+    <string name="notif_action_reschedule">Reschedule</string>
+    <string name="notif_action_next_location">Next Time</string>
 
 
     <!--Inbox/Browse Fragment tests-->
