--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="pref_header_folder">Folders</string>
     <string name="pref_header_notif">Notifications</string>
     <string name="no_remaining_tasks">No Tasks Left!</string>
-    <string name="already_adding_task">Already Adding Task!</string>
+    <string name="already_adding_task">Already Editing Task!</string>
 
     <string name="search_hint">Search tasks and tags</string>
     <string name="project_header_title">Project</string>
